--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
     <link href="@/styles/app.scss" rel="stylesheet" type="text/css">
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
           <!--integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("user_8UIYf2PkaLayjb9iB3Xv2");
+        })();
+    </script>
 </head>
 <body>
 <noscript>
