--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Nazywam sie Krystian Pacholski.Zajmuję się programowaniem, skupiając się na tworzeniu stron internetowych, a to jest moje portfolio"/>
+    <meta name=”robots” content=”noindex,nofollow”>
+    <meta property=”og:type” content=”portfolio” />
+    <meta property=”og:title” content="Krystian Pacholski - Junior Web Developer" />
+    <meta property=”og:description” content="Nazywam sie Krystian Pacholski.Zajmuję się programowaniem, skupiając się na tworzeniu stron internetowych, a to jest moje portfolio" />
+    <meta property=”og:image” content=”https://kpacholski.pl/img/pacholski-page.jpg” />
+    <meta property=”og:url” content=”https://kpacholski.pl” />
+    <meta property=”og:site_name” content="Krystian Pacholski - Junior Web Developer" />
+    <title>Krystian Pacholski - Junior Web Developer</title>
     <link rel="icon" href="<%= BASE_URL %>img/logo.png">
-    <title>Web Developer Krystian Pacholski</title>
+    <link rel=”canonical” href=”https://kpacholski.pl/” />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <link href="@/styles/app.scss" rel="stylesheet" type="text/css">
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
@@ -22,6 +31,7 @@
     <strong></strong>
 </noscript>
 <div id="app"></div>
+<h1></h1>
 <!-- built files will be auto injected -->
 </body>
 </html>
